Bug fixed images not showing at times

--- a/src/main/resources/styles/style.css
+++ b/src/main/resources/styles/style.css
@@ -2,6 +2,10 @@
     -fx-padding:5;
 }
 
+#vboxButtons{
+    -fx-background-color:#123AAF;
+}
+
 .label[
     -fx-padding:3;
 }
